# NeuralNetworkMNIST-CPP

./: environment-info.md
task1/: functions.sh  preceptron.c  preceptronxor  preceptronxor-out  preceptronxor.c
task2/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  task2
task3/: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  NeuralNetwork.cpp  NeuralNetwork.h  Readme.md  cmake_install.cmake  main.cpp  one-output-eloss.csv  oneinput.out.csv  tanh.out.csv  task3  task3-validate  tocsv.pl  training.out.csv  util.h  validation.out.csv
task3/html/: _m_n_i_s_t__reader_8h_source.html  _neural_network_8h_source.html  annotated.html  class_neural_network-members.html  class_neural_network.html  classes.html  files.html  functions.html  functions_func.html  index.html  md__readme.html  pages.html  struct_neural_network_1_1_node-members.html  struct_neural_network_1_1_node.html  util_8h_source.html
task3/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  pages_0.js  searchdata.js
task3/latex/: annotated.tex  class_neural_network.tex  md__readme.tex  refman.tex  struct_neural_network_1_1_node.tex
